--- a/src/components/layouts/Navbar/Navbar.css
+++ b/src/components/layouts/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .Navbar {
-    background-color: #46ACC2;
+    background-color: white;
     display: flex;
     padding: 16px;
     font-family: sans-serif;
     color: white;
+    border: 1px solid gray;
   }
   
   .link {
@@ -17,6 +18,7 @@
   
   .icons {
     margin-left:auto;
+    color: black;
   }
   
   .Navbar__Link-toggle {
